# Dronecraft_archipelago

./: README.md  auto_updater.py
esp/: README.md  platformio.ini
esp/data/: config.json  espnow_config.json
esp/src/: ConfigManager.cpp  ConfigManager.h  ESPNowManager.cpp  ESPNowManager.h  OTAManager.cpp  OTAManager.h  Packet.h  PacketDeserializer.cpp  PacketDeserializer.h  Statistics.cpp  Statistics.h  crc_utils.cpp  crc_utils.h  main.cpp  telemetry_generator.cpp  telemetry_generator.h
esp/test/: test_packet_structures.cpp
esp_controller/: console_integration.py  firmware_monitor.py  firmware_server.py  platformio.ini  sdkconfig.lolin_s2_mini_simple
esp_controller/src/: CMakeLists.txt  main.cpp
skyros/: README.md  ansible_deployment.md  pyproject.toml
skyros/examples/: complex_example.py  example.py  example_stress_usage.py  main.py  qr_detector.py  testMain
skyros/lib/: esp_flasher.py
skyros/src/skyros/: drone.py  drone_data.py  link.py
skyros/src/skyros/collision_avoidance/: __init__.py  abstract_avoidance.py  force_avoidance.py
skyros/src/skyros/lib/: __init__.py  network_utils.py  packet_codec.py  packet_generator.py  packets.py  statistics.py
skyros/test/: esp_simple_test.py  network_performance_test.py  stationary.py  stress.py
